Add The website in the logo

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- start header  -->
     <header>
         <div class="container">
-            <a href="#" class="logo">
+            <a href="https://haithemnecib.github.io/Html-And-Css-Template-Two/" class="logo">
                 <img src="imgs/logo.png" alt="logo">
             </a>
             <nav>
